--- a/单例模式.html
+++ b/单例模式.html
@@ -139,6 +139,47 @@
                 oDiv.style.display = 'block';
             };
 
+
+            // 我如果有很多个单例,每一个都这么写就会很麻烦
+            // 我想实现一个函数,任何一个普通的函数传进来就会变成一个单例
+            // 传func 返回新的函数
+            var getSingle = function (func) {
+                var result = undefined;
+                return function () {
+                    // 因为我不知道我传进来的这个函数需要几个参数,所以用arguments
+                    if(typeof result !== undefined) {
+                        return result;
+                    }
+                    result = func.apply(this, arguments)
+                    return result;
+                }
+            };
+
+            // 换种思路
+            var getSingle = function (func) {
+                var result = undefined;
+                return function () {
+                    if(!result) {
+                        result = func.apply(this, arguments);
+                    }
+                    return result;
+                }
+            };
+
+            var CreateAlert = function (test) {
+                var oDiv = document.createElement('div')
+                oDiv.style.display = 'none';
+                oDiv.innerText = test;
+                document.body.appendChild(oDiv);
+                return oDiv;  // 这里return一个oDiv为了之后好操作
+            };
+
+            var singleAlert = getSingle(CreateAlert);
+
+            oBtn.onclick = function() {
+                var oDiv = new singleAlert('hello duyi'); // 这样就在变量里面返回了一个div只不过没有显示出来, 这里new不new都一样,只不过我new了以后就在函数里面多出来了一个this,
+                oDiv.style.display = 'block';
+            };
         </script>
     </body>
 
