--- a/代理模式.html
+++ b/代理模式.html
@@ -8,6 +8,19 @@
         <script>
             // 代理 
             // 定义: 为一个对象提供一种代理以控制这个对象的访问
+
+            // 代理对象起到类似中介的作用,会增加一些功能(如,校验,合并),也会去掉一些原有对象的功能
+            // 比如它会帮你收集一些请求之后统一发送,再比如它会帮你检查一下请求有没有什么问题,起到一个保护的作用
+
+            // 几种代理的类型:
+            // 虚拟代理: 虚拟代理是把一些开销很大的对象,延迟到真正需要它的时候去创建执行
+            //          图片加载,文件上传
+            // 安全代理: 控制真实对象的访问权限,有些不合格的东西不让发
+            //          登录操作后才能看全部的功能
+            // 远程代理: 一个对象将不同空间的对象进行局部代理
+            //          监控多个对象的状态,总店监控分店
+            // 智能代理: 调用对象代理,处理另外一些事情如垃圾回收机制等,增加一些额外的服务
+            //          提供额外的其他服务, 火车站代售处
         </script>
     </body>
 </html>
