--- a/设计模式写贪吃蛇/贪吃蛇.html
+++ b/设计模式写贪吃蛇/贪吃蛇.html
@@ -5,9 +5,11 @@
         <title>贪吃蛇</title>
     </head>
     <body>
+        <script src="./src/js/jsUtil.js"></script>
         <script>
             // 1.css reset 重设样式 这里没有,没用上
             // 2.抽取公共方法 根据事先梳理好的关系
         </script>
+
     </body>
 </html>
