--- a/设计模式写贪吃蛇/贪吃蛇.html
+++ b/设计模式写贪吃蛇/贪吃蛇.html
@@ -6,9 +6,13 @@
     </head>
     <body>
         <script src="./src/js/jsUtil.js"></script>
+        <script src="./src/js/initVar.js"></script>
+        <script src="./src/js/SquareFactory.js"></script>
+        <script src="./src/js/Ground.js"></script>
         <script>
             // 1.css reset 重设样式 这里没有,没用上
             // 2.抽取公共方法 根据事先梳理好的关系
+            // 3.定义一些基础的变量.对象.
         </script>
 
     </body>
