--- a/设计模式写贪吃蛇/贪吃蛇.html
+++ b/设计模式写贪吃蛇/贪吃蛇.html
@@ -9,6 +9,7 @@
         <script src="./src/js/initVar.js"></script>
         <script src="./src/js/SquareFactory.js"></script>
         <script src="./src/js/Ground.js"></script>
+        <script src="./src/js/snake.js"></script>
         <script>
             // 1.css reset 重设样式 这里没有,没用上
             // 2.抽取公共方法 根据事先梳理好的关系
