--- a/设计模式写贪吃蛇/贪吃蛇.html
+++ b/设计模式写贪吃蛇/贪吃蛇.html
@@ -10,10 +10,19 @@
         <script src="./src/js/SquareFactory.js"></script>
         <script src="./src/js/Ground.js"></script>
         <script src="./src/js/snake.js"></script>
+        <script src="./src/js/Game.js"></script>
         <script>
             // 1.css reset 重设样式 这里没有,没用上
             // 2.抽取公共方法 根据事先梳理好的关系
             // 3.定义一些基础的变量.对象.
+
+            // 4.注意几个事
+            // 有一个节流的处理,防止键盘敲击太快反应不过来,比如300毫秒敲击多少次都算一次
+
+            // 当我蛇越来越大的时候我的食物的创建就越来越容易出现在蛇的身上,当蛇大到一定程度的时候我的食物创建就很困难
+            // 解决办法: 我用一个数据记录我的可用地板,然后不断地更新我的可用地板,创建随机数的时候我在地板里面随机的找一个来创建
+
+            // 我这样写可以随意的添加策略,比如加一个加速功能,就很方便
         </script>
 
     </body>
